--- a/services/market/src/component/nk-swagger/this/openapi/components/schemas/OrderDeliveryDTO.yaml
+++ b/services/market/src/component/nk-swagger/this/openapi/components/schemas/OrderDeliveryDTO.yaml
@@ -40,7 +40,7 @@ properties:
   dates:
     $ref: ./OrderDeliveryDatesDTO.yaml
   region:
-    $ref: ./RegionDTO.yaml
+#    $ref: ./RegionDTO.yaml
   address:
     $ref: ./OrderDeliveryAddressDTO.yaml
   vat:
