--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Market",
   "main": "signal.mjs",
   "scripts": {
-    "start": "node signal.mjs"
+    "start": "node index.cjs"
   },
   "repository": {
     "type": "git",
