--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express-enqueue": "^1.0.0",
     "nodemailer": "^6.9.14",
     "peer": "^1.0.2"
